feat: lazy page banner

--- a/themes/firekylin/includes/page.html
+++ b/themes/firekylin/includes/page.html
@@ -3,7 +3,7 @@
         <article class="post detail">
             {{if index .post.PostOptions "featuredImage"}}
                 <div class="featured-image">
-                    <img src="{{index .post.PostOptions "featuredImage"}}" loading="lazy">
+                    <img data-src="{{index .post.PostOptions "featuredImage"}}" loading="lazy">
                 </div>
             {{end}}
 	        <div class="entry-content">{{.post.Content}}</div>
