--- a/server/themes/default/res/css/main.css
+++ b/server/themes/default/res/css/main.css
@@ -6,14 +6,14 @@
 
 :root {
     --shadow: 0 0px 0px 0 rgb(0 0 0 / 6%), 0 0px 1px 0px rgb(0 0 0 / 10%), 0 0px 5px 0 rgb(91 91 94 / 10%);
-    --content-width: 900px;
+    --content-width: 1000px;
     --content-max-width: 95%;
     --background-color: #fff;
     --header-background-color: #ffffff99;
     --text-color: #333;
     --border-color: #333;
     --article-gap: 30px;
-    --article-radius: 6px;
+    --article-radius: 12px;
     --toc-bg: #ffffffed;
     --toc-after-bg: #ffffffed;
     --code-bg: #f2f2f2;
@@ -26,18 +26,28 @@
     src: url("logo.ttf") format("truetype");
 }
 
-body {
-    color: var(--text-color);
-    font-family: monospace;
-    font-weight: 300;
-    background-color: var(--background-color);
-}
-
 body, html {
     width: 100%;
+    height: 100%;
     min-height: 100%;
-    background-color: var(--background-color)
 }
+
+html {
+    overflow: hidden;
+}
+
+body {
+    color: var(--text-color);
+    font-family: SF Pro SC,SF Pro Text,SF Pro Icons,PingFang SC,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-weight: 300;
+    background-color: var(--background-color);
+    background-image: linear-gradient(to right, #9d9c9b2b 1px, transparent 1px), linear-gradient(to bottom, #9d9c9b2b 1px, transparent 1px);
+    background-size: 50px 50px;
+    overflow: auto;
+    scroll-behavior: smooth;
+}
+
+
 
 a,a:hover {
     color: #2479CC;
@@ -47,7 +57,12 @@ a,a:hover {
 img {
     max-width: 30vw;
     max-height: 50vh;
-    border: 1px solid var(--border-color);
+    /* border: 1px solid var(--border-color); */
+}
+
+video {
+    max-width: 30vw;
+    margin-top: 15px;
 }
 
 #main {
@@ -56,6 +71,13 @@ img {
     margin: auto;
 
     padding-bottom: 20px;
+}
+
+#main #page-post, #main .post.archive {
+    background-color: var(--background-color);
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: var(--shadow);
 }
 
 h1 {
@@ -83,7 +105,7 @@ article h1.title {
     color: var(--text-color);
     margin-bottom: 15px;
     margin-top: 10px;
-    font-size: 40px;
+    font-size: 32px;
 }
 
 .index-post-time {
@@ -162,18 +184,18 @@ article p {
 
 .toc {
     padding: 20px 6px;
-    background-color: var(--toc-bg);
-    position: fixed;
-    top: var(--header-height);
-    height: 100vh;
-    margin: 0;
-    border: none;
-    width: 260px;
-    box-shadow: var(--shadow);
-    transition: all .3s;
-    left: -260px;
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(2px);
+    /* background-color: var(--toc-bg); */
+    /* position: fixed;
+    top: var(--header-height); */
+    /* height: 100vh; */
+    /* margin: 0; */
+    /* border: none; */
+    /* width: 260px; */
+    /* box-shadow: var(--shadow); */
+    /* transition: all .3s; */
+    /* left: -260px; */
+    /* backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px); */
 }
 
 .toc:hover {
@@ -212,6 +234,7 @@ article p {
     overflow: hidden;
     margin-bottom: var(--article-gap);
     border-radius: var(--article-radius);
+    background-color: var(--background-color);
 }
 
 .post-url, .more {
@@ -258,15 +281,22 @@ article p {
     -webkit-backdrop-filter: blur(10px);
     z-index: 2;
     height: var(--header-height);
-}
 
-.header-content {
     width: var(--content-width);
     max-width: var(--content-max-width);
     margin: auto;
+    margin-bottom: 20px;
+    border-radius: 12px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+}
+
+.header-content {
+    /* width: var(--content-width); */
     display: flex;
     align-items: baseline;
     justify-content: space-between;
+    padding: 0 20px;
 }
 
 .header-content nav {
@@ -349,10 +379,6 @@ article p {
         --code-bg: #333;
         --header-background-color: #00000099;
         --background-color: #000;
-    }
-
-    .header {
-        box-shadow: none;
     }
 }
 
